# s2_CNN_MNIST

./: .gitignore  README.md  cloudbuild.yaml  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit-update.yaml  tests.yaml
configs/: sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth  model2.pth  test_model.pth
sklearn_test/: Dockerfile  cloudbuild.yaml
src/s2_cnn_mnist/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: __init__.py  test_data.py  test_model.py  test_train.py
wandb/: latest-run
wandb/run-20260108_140658-ge1rui89/: run-ge1rui89.wandb
wandb/run-20260108_140925-7em1tezu/: run-7em1tezu.wandb
wandb/run-20260108_141131-mzxjmrx0/: run-mzxjmrx0.wandb
wandb/run-20260108_141848-u0u5uqme/: run-u0u5uqme.wandb
wandb/run-20260108_141919-r9atqg7v/: run-r9atqg7v.wandb
wandb/run-20260108_142230-x3k36iqh/: run-x3k36iqh.wandb
wandb/run-20260108_142304-vabpxvom/: run-vabpxvom.wandb
wandb/run-20260108_142332-b5n5lyeq/: run-b5n5lyeq.wandb
wandb/run-20260108_143011-jfyazcnk/: run-jfyazcnk.wandb
wandb/run-20260108_143812-20emjdn1/: run-20emjdn1.wandb
wandb/run-20260108_144010-r8lg2f4o/: run-r8lg2f4o.wandb
wandb/run-20260110_105503-132j0vxs/: run-132j0vxs.wandb
wandb/run-20260110_105621-ny6suf7o/: run-ny6suf7o.wandb
wandb/run-20260110_105749-ko8zncra/: run-ko8zncra.wandb
wandb/run-20260110_105913-ukw264vc/: run-ukw264vc.wandb
wandb/run-20260110_110042-5i9cn1cb/: run-5i9cn1cb.wandb
(+713 files in other folders)
