[project]
name = "s2_ml-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "torch>=2.3.1",
    "torchvision==0.24.1",
    "typer>=0.21.0",
    "wandb>=0.23.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff]
lint.select = ["I"]
line-length=120

[project.scripts]
train = "s2_CNN_MNIST.src.s2_cnn_mnist.train:main"
